api/cudf/22.08/_sources/api_docs/api/cudf.Series.rst.txt
cudf.Series
===========

.. currentmodule:: cudf

.. autoclass:: Series

   


..
   HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
   .. autosummary::
      :toctree:
      
      Series.abs
      Series.add
      Series.add_prefix
      Series.add_suffix
      Series.all
      Series.any
      Series.append
      Series.apply
      Series.applymap
      Series.argsort
      Series.astype
      Series.autocorr
      Series.backfill
      Series.between
      Series.bfill
      Series.clip
      Series.copy
      Series.corr
      Series.count
      Series.cov
      Series.cummax
      Series.cummin
      Series.cumprod
      Series.cumsum
      Series.describe
      Series.deserialize
      Series.device_deserialize
      Series.device_serialize
      Series.diff
      Series.digitize
      Series.div
      Series.divide
      Series.dot
      Series.drop
      Series.drop_duplicates
      Series.dropna
      Series.eq
      Series.equals
      Series.explode
      Series.factorize
      Series.ffill
      Series.fillna
      Series.first
      Series.floordiv
      Series.from_arrow
      Series.from_categorical
      Series.from_masked_array
      Series.from_pandas
      Series.ge
      Series.groupby
      Series.gt
      Series.hash_values
      Series.head
      Series.host_deserialize
      Series.host_serialize
      Series.interpolate
      Series.isin
      Series.isna
      Series.isnull
      Series.items
      Series.iteritems
      Series.keys
      Series.kurt
      Series.kurtosis
      Series.last
      Series.le
      Series.lt
      Series.map
      Series.mask
      Series.max
      Series.mean
      Series.median
      Series.memory_usage
      Series.min
      Series.mod
      Series.mode
      Series.mul
      Series.multiply
      Series.nans_to_nulls
      Series.ne
      Series.nlargest
      Series.notna
      Series.notnull
      Series.nsmallest
      Series.nunique
      Series.pad
      Series.pct_change
      Series.pipe
      Series.pow
      Series.prod
      Series.product
      Series.quantile
      Series.radd
      Series.rank
      Series.rdiv
      Series.reindex
      Series.rename
      Series.repeat
      Series.replace
      Series.resample
      Series.reset_index
      Series.rfloordiv
      Series.rmod
      Series.rmul
      Series.rolling
      Series.round
      Series.rpow
      Series.rsub
      Series.rtruediv
      Series.sample
      Series.scale
      Series.searchsorted
      Series.serialize
      Series.shift
      Series.skew
      Series.sort_index
      Series.sort_values
      Series.std
      Series.sub
      Series.subtract
      Series.sum
      Series.sum_of_squares
      Series.tail
      Series.take
      Series.tile
      Series.to_arrow
      Series.to_cupy
      Series.to_dict
      Series.to_dlpack
      Series.to_frame
      Series.to_hdf
      Series.to_json
      Series.to_list
      Series.to_numpy
      Series.to_pandas
      Series.to_string
      Series.tolist
      Series.transpose
      Series.truediv
      Series.unique
      Series.update
      Series.value_counts
      Series.var
      Series.where




   


..
   HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
   .. autosummary::
      :toctree:
      
      Series.T
      Series.axes
      Series.cat
      Series.data
      Series.dt
      Series.dtype
      Series.empty
      Series.has_nulls
      Series.iloc
      Series.index
      Series.is_monotonic
      Series.is_monotonic_decreasing
      Series.is_monotonic_increasing
      Series.is_unique
      Series.list
      Series.loc
      Series.name
      Series.ndim
      Series.null_count
      Series.nullable
      Series.nullmask
      Series.shape
      Series.size
      Series.str
      Series.struct
      Series.valid_count
      Series.values
      Series.values_host


